ktlint and precommit tasks in a common config :)